--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ I am also a quick learner and grasp new technologies and environments very fast.
                     <div class="my-4 flex flex-row justify-center gap-x-4 pt-2">
                         <a target="_blank"
                             class="rounded-lg bg-zinc-800 p-2 text-2xl text-white ring-zinc-300 transition-all duration-150 hover:ring-2"
-                            href="https://github.com/ansari-saify">
+                            href="https://github.com/mihir-patel-agc">
                             <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img"
                                 viewBox="0 0 24 24" height="30" width="30" xmlns="http://www.w3.org/2000/svg">
                                 <title></title>
