--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Mihir Patel|Nodejs Developer">
+    <meta name="description" content="I am a NodeJS Developer with expertise in ReactJs and VueJS as well. I have been working as a backend developer for over 8 years now and have had the good fortune of working with many types of industries like eCommerce, real estate, food, logistics, etc.">
     <title>Mihir Patel</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,600;1,700&display=swap"
